--- a/templates/AppTwo/index.html
+++ b/templates/AppTwo/index.html
@@ -39,6 +39,20 @@
                     <a href="https://github.com/Pawel-9215/TerminalDungeon" class="my_links">>> Github Page</a>
                 </div>
             </div>
+            <div class='row'>
+               
+                <div class="col-sm" id="toright">
+                    Last Commit: {{ commit_date }}
+                </div>
+                
+            </div>
+            <div class='row'>
+         
+                <div class="col-sm" id="toright">
+                    {{ commit_msg }}
+                </div>
+                
+            </div>
             <br><br>
             <div id="formdiv">
             <form method="post" id="only_form">
